uploaded all dependecies

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	</head>
 	<body>
 		<form action="tripoto" method="post">
-			<input type="text" name="inputString">
-			<input type="number" name="threshold">
-			<input type="radio" name="comparison" value="lt" id="lt"> <label for ="lt" >Less Than
-			<input type="radio" name="comparison" value="eq" id="eq"> <label for ="eq" >Equal
+			<input type="text" name="inputString" placeholder="String"><br><br>
+			<input type="number" name="threshold" placeholder="Integer value">
+			<input type="radio" name="comparison" value="lt" id="lt" > <label for ="lt" >Less Than
+			<input type="radio" name="comparison" value="eq" id="eq"  checked="checked"> <label for ="eq" >Equal
 			<input type="radio" name="comparison" value="lte" id="lte"> <label for ="lte" >LT or Equal
 			<button type="submit">Submit String</button>
 		</form>
